<resources>
    <string name="app_name">Petualang Muda</string>
    <string name="lanjut">CONTINUE</string>
    <string name="new_game">NEW GAME</string>
    <string name="rumah">RUMAH</string>
    <string name="hewan">HEWAN</string>
    <string name="ruang_tamu">Ruang Tamu</string>
    <string name="kamar_tidur">Kamar Tidur</string>
    <string name="hewan_darat">Hewan Darat</string>
    <string name="hewan_air">Hewan Air</string>
    <string name="serangga">Serangga</string>
    <string name="stage_1">STAGE 1</string>
    <string name="stage_2">STAGE 2</string>
    <string name="stage_3">STAGE 3</string>
    <string name="camera">CAMERA</string>
    <string name="gallery">GALLERY</string>
    <string name="simpan">SIMPAN</string>
    <string name="title_activity_explanation">ExplanationActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exit_dialog">ANDA YAKIN INGIN MENGAKHIRI PERMAINAN?</string>
    <string name="batal">BATAL</string>
    <string name="keluar">KELUAR</string>
    <string name="main_menu">MAIN MENU</string>
    <string name="resume">RESUME</string>
    <string name="coming_soon">COMING\nSOON</string>
    <string name="sign_in">LOG IN</string>
    <string name="halo_petualang_muda">Halo Petualang Muda!</string>
    <string name="are_u_ready">Sudah siap berpetualang bersama?</string>
    <string name="hint_name">Masukkan nama Anda</string>
    <string name="hint_email">Masukkan email Anda</string>
    <string name="hint_password">Masukkan password Anda</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="text_login_page">LOG IN</string>
    <string name="log_in">LOG IN</string>
    <string name="register">REGISTER</string>
    <string name="name">Nama</string>
    <string name="sign_up">SIGN UP</string>
    <string name="greeting">%1$s</string>
    <string name="register_dialog">SELAMAT BERGABUNG,\nPETUALANG MUDA!</string>
    <string name="register1_dialog">Yuk log in, untuk memulai petualanganmu.</string>
    <string name="ok">OK</string>
    <string name="login_dialog">SELAMAT DATANG, PETUALANG MUDA!</string>
    <string name="login1_dialog">Mulai berpetualang dan selesaikan tantangan yang ada!</string>
    <string name="logout_dialog">ANDA YAKIN INGIN KELUAR\nDARI AKUN INI?</string>
    <string name="correct_response">SELAMAT!\nJAWABAN KAMU BENAR!</string>
    <string name="wrong_answer">JAWABAN SALAH</string>
    <string name="soal_1">SOAL 1</string>
    <string name="narration">NARASI</string>
    <string name="narasi1">Halo petualang muda %1$s! Di hari libur ini kita akan berkunjung ke peternakan yang ada di desa. Kita pasti bisa melihat hewan ternak di sana, seru banget kan?\n\nAyo coba kita cari sapi yg ada disana!</string>
    <string name="try_again">COBA LAGI</string>
</resources>