<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".subcategory.AnimalsActivity">

    <include
        android:id="@+id/menu"
        layout="@layout/template_menu"/>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="216dp"
        android:layout_height="560dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/land_animals"
            android:layout_width="215dp"
            android:layout_height="120dp"
            android:background="@drawable/animals_land"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="120dp"
            android:text="@string/hewan_darat"
            android:textAlignment="center"
            android:textColor="@color/yellow"
            android:textSize="25sp" />

        <ImageButton
            android:id="@+id/underwater_animals"
            android:layout_width="215dp"
            android:layout_height="120dp"
            android:layout_marginTop="200dp"
            android:background="@drawable/animals_underwater"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="320dp"
            android:text="@string/hewan_air"
            android:textAlignment="center"
            android:textColor="@color/yellow"
            android:textSize="25sp" />

        <ImageButton
            android:id="@+id/insects"
            android:layout_width="215dp"
            android:layout_height="120dp"
            android:layout_marginTop="400dp"
            android:background="@drawable/animals_insect_disable"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="430dp"
            android:text="@string/coming_soon"
            android:textAlignment="center"
            android:textColor="@color/material_on_primary_disabled"
            android:textSize="25sp" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>